# hddc2b

./: CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE.MIT-0  README.md
.github/workflows/: gh-pages.yml
docs/sphinx/source/: api.rst  blas_lapack.rst  code_generation.rst  conf.py  frames.rst  index.rst  installation.rst  kelo_frames.odg  least_squares.rst  references.rst
docs/sphinx/source/_static/css/: custom.css
docs/sphinx/source/_static/js/: load-mathjax.js
generator/: CMakeLists.txt  Makefile  example.hddc2b.json  hddc2b.context.json  hddc2b.schema.json  hddc2b.shacl.ttl  hdr.jinja  impl.jinja
include/hddc2b/functions/: drive.h  platform.h  solver.h  wheel.h
src/: CMakeLists.txt  config.c  config.h  drive.c  platform.c  solver.c  wheel.c
src/example/: CMakeLists.txt  hddc2b_example.c  solver.c  solver.h
test/: CMakeLists.txt  common.h  drive_test.c  main_test.c  platform_test.c  solver_test.c  wheel_test.c
